...
    sameServerChainName: boolean,
  ) => Promise<SetServerResult>;
  clearToAddr: () => void;
  setSecurityOption: (s: SecurityType) => Promise<void>;
};

const Send: React.FunctionComponent<SendProps> = ({
  sendTransaction,
  clearToAddr,
  toggleMenuDrawer,
  setShieldingAmount,
  setScrollToTop,
  setScrollToBottom,
...
          ref={sendSheetRef}
          snapPoints={sendSnapPoints}
          onChange={i => {
            internalSnapIndexRef.current = i;
            onPriceSnapChange(i);
          }}
          header={sendHeader}
        >
          <ScrollView
            ref={scrollViewRef}
            onContentSizeChange={(_, height) => setContentHeight(height)}
            keyboardShouldPersistTaps="handled"
            contentContainerStyle={{}}
...
                    <View testID="send.address.check">
                      <FontAwesomeIcon icon={faCheck} color={colors.fgAccent} />
                    </View>
                  )}
                  {validAddress === -1 && (
                    <ErrorText
                      testID="send.address.error"
                      style={{ color: colors.fgDanger }}
                    >
                      {translate('send.invalidaddress') as string}
                    </ErrorText>
                  )}
                </View>
...
                      style={{
                        flex: 1,
                        justifyContent: 'center',
                      }}
                    >
                      <TextInput
                        testID="send.addressplaceholder"
                        placeholder={
                          translate('send.addressplaceholder') as string
                        }
                        placeholderTextColor={colors.fgMuted}
                        style={{
                          color:
...
