...
            top: 0,
          }}
        >
          <View style={{ alignItems: 'center', flexDirection: 'row', gap: 14 }}>
            {!noDrawMenu && (
              <TouchableOpacity
                testID="header.drawmenu"
                accessible={true}
                accessibilityLabel={translate('menudrawer-acc') as string}
                onPress={toggleMenuDrawer}
              >
                <MenuMorphIcon />
              </TouchableOpacity>
...
