...

type Options = {
  value: string;
  text: string;
};

const Settings: React.FunctionComponent<SettingsProps> = ({
  navigation,
  setServerOption,
  setCurrencyOption,
  setLanguageOption,
  setSendAllOption,
  setDonationOption,
...
          pointerEvents="box-none"
          style={[StyleSheet.absoluteFill, sheetSlideStyle]}
        >
          <AppSheet
            ref={settingsSheetRef}
            snapPoints={settingsSnapPoints}
            header={settingsHeader}
            renderFooter={renderSettingsFooter}
          >
            <BottomSheetScrollView
              keyboardShouldPersistTaps="handled"
              testID="settings.scroll-view"
              bounces={false}
              alwaysBounceVertical={false}
              style={{
                flex: 1,
              }}
              contentContainerStyle={{
...
