export enum MenuItemEnum {
  WalletSeedUfvk = 'Wallet Seed Ufvk',
  Rescan = 'Rescan',
  Settings = 'Settings',
  ChangeWallet = 'Change Wallet',
  SyncReport = 'Sync Report',
  FundPools = 'Fund Pools',
  Insight = 'Insight',
  TipZingoLabs = 'Tip ZingoLabs',
  AddressBook = 'Address Book',
  About = 'About',
  Support = 'Support',
  Server = 'Server',
  //Chats = 'Chats',
}
